# GPI-2

./: CMakeLists.txt  configure.ac.in
cmake/: FindIBVerbs.cmake  FindPortals.cmake  FindPortals4.cmake
config/: devices.m4
src/: CMakeLists.txt  GPI2.c  GPI2_CONFIG.c  GPI2_GRP.c  GPI2_SEG.c  GPI2_Types.h
src/devices/: CMakeLists.txt
src/devices/bxi-portals/: CMakeLists.txt  GPI2_BXI.c  GPI2_BXI.h  GPI2_BXI_ATOMIC.c  GPI2_BXI_GRP.c  GPI2_BXI_IO.c  GPI2_BXI_PASSIVE.c  GPI2_BXI_SEG.c
src/devices/ib/: CMakeLists.txt
src/devices/include/: GPI2_Dev.h
src/devices/portals/: CMakeLists.txt  GPI2_PORTALS.c  GPI2_PORTALS.h  GPI2_PORTALS_ATOMIC.c  GPI2_PORTALS_GRP.c  GPI2_PORTALS_IO.c  GPI2_PORTALS_PASSIVE.c  GPI2_PORTALS_SEG.c
src/devices/tcp/: CMakeLists.txt
src/include/: GASPI_types.h
tests/tests/: CMakeLists.txt
tests/tests/atomic/: CMakeLists.txt
tests/tests/cm/: CMakeLists.txt
tests/tests/collectives/: CMakeLists.txt
tests/tests/comm/: CMakeLists.txt
tests/tests/config/: CMakeLists.txt
tests/tests/error_vec/: CMakeLists.txt
tests/tests/extensions/: CMakeLists.txt
tests/tests/groups/: CMakeLists.txt
tests/tests/init/: CMakeLists.txt
tests/tests/lists/: CMakeLists.txt
tests/tests/notifications/: CMakeLists.txt
tests/tests/passive/: CMakeLists.txt
tests/tests/segments/: CMakeLists.txt
